# CornLake---Caso-de-uso

./: .gitignore  ModeloTransacional.dbs  ModeloTransacional.dbs.bak  README.md  TODO.md
dags/: pyproject.toml
jobs/lambda-cornlake-01-gerador-de-dados-no-sistema-transacional/: samconfig.toml  template.yaml
jobs/lambda-cornlake-01-gerador-de-dados-no-sistema-transacional/DataGenerator/: app.py  database.py  generator.py  logger.py
lambda-cornlake-01-gerador-de-dados-no-sistema-transacional/: .env.example  README.md  build.sh  pyproject.toml  template.yaml
lambda-cornlake-01-gerador-de-dados-no-sistema-transacional/DataGenerator/: http_utils.py  requirements.txt
